Shubham_Adlinge/Kubernetes/Manifest/objects/Ingress/ingress.yaml
### 3. **Ingress**
---
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: abhidhoble.online  
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: app-blue-service
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: app-green-service
            port:
              number: 80
...
